testsuite/tests/th/TH_Roles1.stderr

TH_Roles1.hs:7:2: error:
    • Illegal role annotation for T;
      did you intend to use RoleAnnotations?
    • while checking a role annotation for ‘T’
